[tool.poetry]
name = "ssh-keyservice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.2"
flask-session = "^0.8.0"
werkzeug = "^3.1.4"
requests = "^2.32.5"
identity = "^0.11.0"
python-dotenv = "^1.2.1"
identify = "^2.6.15"
flask-wtf = "^1.2.2"
flask-limiter = "^4.0"
redis = "^7.1.0"
azure-identity = "^1.25.1"
azure-keyvault-secrets = "^4.10.0"
azure-monitor-opentelemetry = "^1.8.3"
gunicorn = "^23.0.0"
uvicorn = "^0.38.0"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.0"

[tool.poetry-auto-export]
output = "requirements.txt"
without_hashes = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
