[tool.poetry]
name = "ssh-keyservice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.2"
flask-session = "^0.8.0"
werkzeug = "^3.1.4"
requests = "^2.32.5"
python-dotenv = "^1.2.1"
flask-wtf = "^1.2.2"
flask-limiter = "^4.0"
redis = "^7.1.0"
gunicorn = "^23.0.0"
uvicorn = "^0.38.0"
cryptography = "^44.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"

[tool.poetry-auto-export]
output = "requirements.txt"
without_hashes = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
